<resources>
    <string name="app_name">CityRooter</string>

    <!--CONTENT DESCRIPTION-->
    <string name="logo">Logo</string>
    <string name="burger">burger</string>
    <string name="arr_left">arrLeft</string>
    <string name="arr_right">arrRight</string>
    <string name="banner">banner</string>

    <!--STRINGS-->
    <!--MAIN ACTIVITY-->
    <string name="home_nav_bar_title">Home</string>
    <string name="profile_nav_bar_title">Profile</string>
    <string name="call_nav_bar_title">Call</string>
    <string name="clients_nav_bar_title">Clients</string>
    <string name="contact_nav_bar_title">Contact Us</string>
    <string name="more">Selengkapnya</string>
    <string name="slogan_footer_title">Layanan Pipa Mampet Terbaik di Palembang</string>
    <string name="question_title">Ada Pertanyaan?</string>
    <string name="question_desc">Silahkan Booking dan Konsultasi Sekarang Juga!</string>
    <string name="whatsapp_btn_label">WhatsApp</string>
    <string name="ig_btn_label">Follow @cityrooter.id</string>
    <string name="copyright">Copyright &#169; 2020 CityRooter.id  | Solusi Pipa Mampet Palembang</string>
    <string name="contact_us_label">Hubungi Kami</string>
    <string name="contact_us_desc">Kirimkan Informasi atau Penawaran yang Anda Butuhkan</string>
    <string name="message_label">Pesan *</string>
    <string name="message_placeholder">Masukkan Pesan</string>
    <string name="message_cta">Mengirim Pesan</string>
    <string name="our_client">Client Kami</string>
    <string name="our_client_description">Please Kindly Check Our Instagram @cityrooter.id</string>
</resources>